--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,31 @@
-body{
+html, body{
+    margin: 0px;
     background-image: url('assets/background.jpg');
 }
 
+.main{
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center
+}
 .center{
     margin: auto;
     width: 50%;
     padding: 10px;
-}
-
-.container{
     align-items: center;
     justify-content: center;
-    width: 60%;
-    height: 100%;
-    object-fit: contain;
+}
+
+.box{
+    width: 800px;
     border-radius: 49px;
     box-shadow: 1px 1px 10px 0 rgba(0, 0, 0, 0.5);
     background-color: #ffffff;
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
 
 input[type=text] {
@@ -44,4 +53,8 @@ input[type=text]:focus{
     height: 30px;
     left: 973px;
     top: 121px;
+}
+
+h1{
+    display: inline;
 }
