--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,7 @@ input[type=text] {
     width: 50%;
     box-sizing: border-box;
     border: none;
-    border-bottom: 2px solid red;
+    border-bottom: 2px solid black;
     font-size: 16px;
     background-color: white;
     background-image: url('./assets/search.png');
@@ -41,12 +41,7 @@ input[type=text] {
     background-position: 10px 10px; 
     background-repeat: no-repeat;
     padding: 12px 20px 12px 40px;
-    transition: width 0.4s ease-in-out;
   }
-
-input[type=text]:focus{
-    width: 100%;
-}
 
 .search{
     position: absolute;
