--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@ body{
     margin: 0px;
     background-image: url('assets/background.jpg');
     background-repeat: no-repeat;
+    background-size: 100% 100%;
 }
 
 .main{
